[tool.poetry]
name = "toml-cli"
version = "0.5.0"
description = "Command line interface to read and write keys/values to/from toml files"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/toml-cli"
readme = "README.md"
packages = [{ include = "toml_cli" }]

[tool.poetry.scripts]
toml = 'toml_cli:main'

[tool.poetry.dependencies]
python = ">=3.7"
typer = ">=0.3.2"
tomlkit = ">=0.7.2"
regex = ">=2020.7.14"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
