[tool.poetry]
name = "toml-cli"
version = "0.7.0"
description = "Command line interface to read and write keys/values to/from toml files"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/toml-cli"
readme = "README.md"
packages = [{ include = "toml_cli" }]

[tool.poetry.scripts]
toml = 'toml_cli:main'

[tool.poetry.dependencies]
python = ">=3.8"
typer = ">=0.3.2"
tomlkit = ">=0.12.1"
regex = ">=2020.7.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["pytest_nlcov"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
