[project]
name = "toml-cli"
version = "0.8.1"
description = "Command line interface to read and write keys/values to/from toml files"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
requires-python = ">=3.10"
dependencies = [
    "jmespath>=1.0.1",
    "regex>=2020.7.14",
    "tomlkit>=0.13.3",
    "typer>=0.16.0",
]
authors = [{ name = "Marc Rijken", email = "marc@rijken.org" }]
scripts = { toml = 'toml_cli:main'}

[project.urls]
Repository = "https://github.com/mrijken/toml-cli"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.isort]
force-single-line = true

[tool.hatch.build.targets.wheel]
packages = ["toml_cli"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
